--- a/styles.css
+++ b/styles.css
@@ -1,164 +1,197 @@
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
-}
-
-body{
-  background-color: #373F51;
-  color: #ededed;
-}
-
-.header{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 20px 10%;
-  background-color: #373F51;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 100;
-}
-
-.navbar a{
-  display: inline-block;
-  font-size: 25px;
-  color: #fff;
-  background-color: #373F51;
-  text-decoration: none;
-  border-radius: 10px;
-  font-weight: 500;
-  margin-left: 35px;
-  transition: .3s;
-  opacity: 0;
-  animation: slidetop .5s ease forwards;
-  animation-delay: calc(.2s*var(--i));
-}
-
-
-
-.navbar a:hover{
-  color: #373F51;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+    scroll-behavior: smooth;
+  }
   
-  background: #fff;
-}
-
-.home{
-  position: relative;
-  width: 100%;
-  justify-content: space-between;
-  height: 100vh;
-  background: url(Média/home.png) no-repeat;
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  align-items: center;
-  padding: 70px 10% 0;
-  animation: slideleft 2s ease forwards;
-}
-
-.home-content{
-  box-shadow: 0 0 20px #53D8FB;
-  padding: 3rem;
-  border-radius: 12px;
-  min-height: 400px;
-  width: 30%;
-  border: 2px solid white;
-}
-
-.home-content h3 {
-  font-size: 32px;
-  font-weight: 700;
-  opacity: 0;
-  animation: slidebottom 1s ease forwards;
-  animation-delay: .7s;
-}
-
-.space {
-  margin-bottom: 30px;
-} 
-
-.home-content h1{
-  font-size: 56px;
-  font-weight: 700;
-  margin: -3px 0;
-  opacity: 0;
-  animation: slideright 1s ease forwards;
-  animation-delay: 1s;
-}
-
-.home-content p{
-  font-size: 20px;
-  opacity: 0;
-  animation: slideleft 1s ease forwards;
-  animation-delay: 1s;
-}
-
-.home-sci a{
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  background: transparent;
-  border: 2px solid #53D8FB;
-  border-radius: 50%;
-  font-size: 20px;
-  color: #53D8FB;
-  text-decoration: none;
-  margin: 30px 15px 30px 0;
-  opacity: 0;
-  animation: slideleft 1s ease forwards;
-  animation-delay: calc(.2s*var(--i));
-}
-
-.home-sci a:hover{
-  background: #53D8FB;
-  color: #081b29;
-  box-shadow: 0 0 20px #53D8FB;
-}
-
-.arrow-container {
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  animation: bounce 1s infinite;
-  border-radius: 3px;
-}
-
-.arrow {
-  width: 40px;
-  height: 80px;
-  border-width: 0 2px 2px 0;
-  display: inline-block;
-  position: relative;
-  border-radius: 3px;
-}
-
-.arrow::before {
-  content: "";
-  width: 30px;
-  height: 30px;
-  border-bottom: 5px solid #53D8FB;
-  border-right: 5px solid #53D8FB;
-  transform: rotate(45deg);
-  position: absolute;
-  top: -8px;
-  left: 5px;
-  border-radius: 3px;
-}
-
-
-
-.about {
-    border-left: 2px solid #fff;
+  body{
+    background-color: #373F51;
+    color: #ededed;
+  }
+  
+  .header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 10%;
+    background-color: #373F51;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+  }
+  
+  .navbar a{
+    display: inline-block;
+    font-size: 25px;
+    color: #fff;
+    background-color: #373F51;
+    text-decoration: none;
+    border-radius: 10px;
+    font-weight: 500;
+    margin-left: 35px;
+    transition: .3s;
+    opacity: 0;
+    animation: slidetop .5s ease forwards;
+    animation-delay: calc(.2s*var(--i));
+  }
+  
+  
+  
+  .navbar a:hover{
+    color: #373F51;
+    
+    background: #fff;
+  }
+  
+  .home{
+    position: relative;
+    width: 100%;
+    justify-content: space-between;
+    height: 100vh;
+    background: url(Média/home.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    padding: 70px 10% 0;
+    animation: slideleft 2s ease forwards;
+  }
+  
+  .home-content{
+    box-shadow: 0 0 20px #53D8FB;
+    padding: 3rem;
+    border-radius: 12px;
+    min-height: 400px;
+    width: 30%;
+    border: 2px solid white;
+  }
+  
+  .home-content h3 {
+    font-size: 32px;
+    font-weight: 700;
+    opacity: 0;
+    animation: slidebottom 1s ease forwards;
+    animation-delay: .7s;
+  }
+  
+  .space {
+    margin-bottom: 30px;
+  } 
+  
+  .home-content h1{
+    font-size: 56px;
+    font-weight: 700;
+    margin: -3px 0;
+    opacity: 0;
+    animation: slideright 1s ease forwards;
+    animation-delay: 1s;
+  }
+  
+  .home-content p{
+    font-size: 20px;
+    opacity: 0;
+    animation: slideleft 1s ease forwards;
+    animation-delay: 1s;
+  }
+  
+  .home-sci a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #53D8FB;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #53D8FB;
+    text-decoration: none;
+    margin: 30px 15px 30px 0;
+    opacity: 0;
+    animation: slideleft 1s ease forwards;
+    animation-delay: calc(.2s*var(--i));
+  }
+  
+  .home-sci a:hover{
+    background: #53D8FB;
+    color: #081b29;
+    box-shadow: 0 0 20px #53D8FB;
+  }
+  
+  .arrow-container {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    animation: bounce 1s infinite;
+    border-radius: 3px;
+  }
+  
+  .arrow {
+    width: 40px;
+    height: 80px;
+    border-width: 0 2px 2px 0;
+    display: inline-block;
+    position: relative;
+    border-radius: 3px;
+  }
+  
+  .arrow::before {
+    content: "";
+    width: 30px;
+    height: 30px;
+    border-bottom: 5px solid #53D8FB;
+    border-right: 5px solid #53D8FB;
+    transform: rotate(45deg);
+    position: absolute;
+    top: -8px;
+    left: 5px;
+    border-radius: 3px;
+  }
+  
+  
+  
+  .about {
+      border-left: 2px solid #fff;
+      min-height: 100%;
+      width: 90%;
+      margin-left: 50px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      margin-bottom: 50px;
+    }
+  
+  
+  #about p{
+    margin-top: 4%;
+    margin-left: 35px;
+    font-size: 2.5vw;
+    color: #fff;
+    font-weight: 300;
+  }
+  
+  #about h2{
+    background-color: #373F51;
+    margin-left: -3%;
+    margin-top: 2.5%;
+    padding: 1rem 0;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: clamp(1.75rem, 3vw, 2.1Rrem);
+    color: #fff;
+    font-size: 3rem;
+  }
+  
+  section #device{
+  
     min-height: 100%;
     width: 90%;
     margin-left: 50px;
@@ -167,265 +200,233 @@ body{
     flex-direction: column;
     margin-bottom: 50px;
   }
-
-
-#about p{
-  margin-top: 4%;
-  margin-left: 35px;
-  font-size: 2.5vw;
-  color: #fff;
-  font-weight: 300;
-}
-
-#about h2{
-  background-color: #373F51;
-  margin-left: -3%;
-  margin-top: 2.5%;
-  padding: 1rem 0;
-  text-transform: uppercase;
-  font-weight: 900;
-  font-size: clamp(1.75rem, 3vw, 2.1Rrem);
-  color: #fff;
-  font-size: 3rem;
-}
-
-section #device{
-
-  min-height: 100%;
-  width: 90%;
-  margin-left: 50px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  margin-bottom: 50px;
-}
-
-section #device h2.titre {
-  border-bottom: #fff solid 2px;
-  margin-left: 50px;
-  margin-bottom: 50px;
-  margin-top: 2.5%;
-  padding: 2px;
-  text-transform: uppercase;
-  display: flex;
-  justify-content: center;
-  font-weight: 900;
-  font-size: clamp(1.75rem, 3vw, 2.1Rrem);
-  color: #fff;
-  font-size: 3rem;
-}
-
-
-
-.cards-container {
-  margin: 50px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 2rem;
-  padding-bottom: 2rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.card{
-
-  background-color: var(--lowmid-gray);
-  box-shadow: 0px 5px 35px -3px rgba(0,0,0,0.1);
-  position: relative;
-  max-width: 700px;
-  min-height: 370px;
-  place-self: center;
-  border-radius: 24px;
-}
-
-.card-header{
-  background-color: var(--transparent);
-
-}
-
-.card-image{
-  width: 100%;
-  border-radius: 24px 24px 0px 0px;
-}
-
-.card-content{
-  padding: 0rem 2rem;
-
-}
-.card-title{
-  margin: 1rem 0;
-  color: var(--near-white);
-
-}
-
-.card-description{
-  color: var(--navlink);
-  max-width: 60ch;
-
-
-}
-
-.card-version{
-  color: var(--footer-text-dark);
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  margin: 1.5rem 2.5rem;
-}
-
-.card-footer{
-  display: flex;
-  flex-direction: column;
-  margin: 2rem;
-}
-
-footer{
-  min-height: 100vh;
-  background: #000;
-  margin-top: 4%;
-  padding: 0 10% ;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-footer#contact p:first-child {
-  font-size: 4.5rem;
-  text-transform: uppercase;
-  color: #fff;
-  padding: 10% 0;
-}
-
-.link {
-  display: inline-block;
-  padding: .2rem;
-  font-weight: 600;
-  text-align: center;
-  text-transform: uppercase;
-  text-decoration: underline;
-  background: linear-gradient(to left,black 50%,white 50%) right;
-    background-size: auto;
-  color: #fff;
-  background-size: 235%;
-  transition: .5s ease;
-  mix-blend-mode: difference;
-}
-
-.link:hover{
-  background-position: left;
-  color: #000;
-  mix-blend-mode: difference;
-}
-
-form{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100px; 
-  height: 100px;
-}
-
-button#send{
-  display: inline-block;
-  padding: .2rem;
-  font-weight: 600;
-  text-align: center;
-  text-transform: uppercase;
-  text-decoration: underline;
-  background: linear-gradient(to left,black 50%,white 50%) right;
-    background-size: auto;
-  color: #fff;
-  background-size: 235%;
-  transition: .5s ease;
-  mix-blend-mode: difference;
-}
-
-button#send:hover{
-  background-position: left;
-  color: #000;
-  mix-blend-mode: difference;
-}
-
-@keyframes bounce {
-  0%,
-  20%,
-  50%,
-  80%,
-  100% {
+  
+  section #device h2.titre {
+    border-bottom: #fff solid 2px;
+    margin-left: 50px;
+    margin-bottom: 50px;
+    margin-top: 2.5%;
+    padding: 2px;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    font-weight: 900;
+    font-size: clamp(1.75rem, 3vw, 2.1Rrem);
+    color: #fff;
+    font-size: 3rem;
+  }
+  
+  
+  
+  .cards-container {
+    margin: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 2rem;
+    padding-bottom: 2rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+  
+  .card{
+  
+    background-color: var(--lowmid-gray);
+    box-shadow: 0px 5px 35px -3px rgba(0,0,0,0.1);
+    position: relative;
+    max-width: 700px;
+    min-height: 370px;
+    place-self: center;
+    border-radius: 24px;
+  }
+  
+  .card-header{
+    background-color: var(--transparent);
+  
+  }
+  
+  .card-image{
+    width: 100%;
+    border-radius: 24px 24px 0px 0px;
+  }
+  
+  .card-content{
+    padding: 0rem 2rem;
+  
+  }
+  .card-title{
+    margin: 1rem 0;
+    color: var(--near-white);
+  
+  }
+  
+  .card-description{
+    color: var(--navlink);
+    max-width: 60ch;
+  
+  
+  }
+  
+  .card-version{
+    color: var(--footer-text-dark);
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 1.5rem 2.5rem;
+  }
+  
+  .card-footer{
+    display: flex;
+    flex-direction: column;
+    margin: 2rem;
+  }
+  
+  footer{
+    min-height: 100vh;
+    background: #000;
+    margin-top: 4%;
+    padding: 0 10% ;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  footer#contact p:first-child {
+    font-size: 4.5rem;
+    text-transform: uppercase;
+    color: #fff;
+    padding: 10% 0;
+  }
+  
+  .link {
+    display: inline-block;
+    padding: .2rem;
+    font-weight: 600;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: underline;
+    background: linear-gradient(to left,black 50%,white 50%) right;
+      background-size: auto;
+    color: #fff;
+    background-size: 235%;
+    transition: .5s ease;
+    mix-blend-mode: difference;
+  }
+  
+  .link:hover{
+    background-position: left;
+    color: #000;
+    mix-blend-mode: difference;
+  }
+  
+  form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100px; 
+    height: 100px;
+  }
+  
+  button#send{
+    display: inline-block;
+    padding: .2rem;
+    font-weight: 600;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: underline;
+    background: linear-gradient(to left,black 50%,white 50%) right;
+      background-size: auto;
+    color: #fff;
+    background-size: 235%;
+    transition: .5s ease;
+    mix-blend-mode: difference;
+  }
+  
+  button#send:hover{
+    background-position: left;
+    color: #000;
+    mix-blend-mode: difference;
+  }
+  
+  @keyframes bounce {
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-20px);
+    }
+    60% {
+      transform: translateY(-10px);
+    }
+  }
+  
+  
+  @keyframes slideleft {
+    0%{
+      transform: translateX(1000px);
+      opacity: 0;
+    }
+  
+    100%{
+      transform: translateX(0px);
+      opacity: 1;
+    }
+    
+  }
+  
+  @keyframes slideright {
+    0%{
+      transform: translateX(-100px);
+      opacity: 0;
+    }
+  
+    100%{
+      transform: translateX(0px);
+      opacity: 1;
+    }
+    
+  }
+  
+  @keyframes slidetop {
+    0%{
+      transform: translateY(100px);
+      opacity: 0;
+    }
+  
+    100%{
+      transform: translateY(0px);
+      opacity: 1;
+    }
+    
+  }
+  
+  @keyframes slidebottom {
+    0%{
+      transform: translateY(-100px);
+      opacity: 0;
+    }
+  
+    100%{
+      transform: translateY(0px);
+      opacity: 1;
+    }
+    
+  }
+  
+  @keyframes bounce2 {
+  0%, 20%, 50%, 80%, 100% {
     transform: translateY(0);
   }
+  
   40% {
-    transform: translateY(-20px);
+    transform: translateY(-30px);
   }
   60% {
-    transform: translateY(-10px);
+    transform: translateY(-15px);
   }
-}
-
-
-@keyframes slideleft {
-  0%{
-    transform: translateX(1000px);
-    opacity: 0;
   }
-
-  100%{
-    transform: translateX(0px);
-    opacity: 1;
-  }
-  
-}
-
-@keyframes slideright {
-  0%{
-    transform: translateX(-100px);
-    opacity: 0;
-  }
-
-  100%{
-    transform: translateX(0px);
-    opacity: 1;
-  }
-  
-}
-
-@keyframes slidetop {
-  0%{
-    transform: translateY(100px);
-    opacity: 0;
-  }
-
-  100%{
-    transform: translateY(0px);
-    opacity: 1;
-  }
-  
-}
-
-@keyframes slidebottom {
-  0%{
-    transform: translateY(-100px);
-    opacity: 0;
-  }
-
-  100%{
-    transform: translateY(0px);
-    opacity: 1;
-  }
-  
-}
-
-@keyframes bounce2 {
-0%, 20%, 50%, 80%, 100% {
-  transform: translateY(0);
-}
-
-40% {
-  transform: translateY(-30px);
-}
-60% {
-  transform: translateY(-15px);
-}
-}
