--- a/styles.css
+++ b/styles.css
@@ -289,6 +289,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    line-height: 1.5;
   }
   
   footer#contact p:first-child {
