--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,7 @@
       justify-content: center;
       flex-direction: column;
       margin-bottom: 50px;
+      line-height: 1.5;
     }
   
   
